211 trying to get CacheAutoconfigure to put the Properties configurationin the spring context